--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@turf/turf": "^6.5.0",
     "deck.gl": "^8.9.0",
     "maplibre-gl": "^2.4.0",
     "react": "^18.0.0",
